*Ember-REST 0.1.1 (April 2, 2012)*

* ResourceController._resourceUrl() can now extract a resourceUrl from a Resource that hasn't been instantiated

*Ember-REST 0.1.0 (April 2, 2012)*

* Added versioning to Ember-REST
* Verified compatibility with Ember 0.9.6

*March 22, 2012*

* Introduced Ember.ResourceAdapter

*March 12, 2012*

* Ember.Resource: added optional resourceIdField
* BREAKING: Ember.Resource: renamed _id() -> _resourceId() to avoid naming conflicts

*February 27, 2012*

* Added full test suite
* Ember.Resource: added isNew()
* Ember.Resource: added _id()
* Ember.Resource: added findResource()
* Ember.ResourceController: added clearAll()

*February 2, 2012*

* BREAKING: Ember.Resource: renamed url -> resourceUrl
* BREAKING: Ember.Resource: renamed name -> resourceName
* BREAKING: Ember.Resource: renamed properties -> resourceProperties
* BREAKING: Ember.Resource: renamed save() -> saveResource()
* BREAKING: Ember.Resource: renamed destroy() -> destroyResource()
* BREAKING: Ember.ResourceController: renamed type -> resourceType
* BREAKING: Ember.ResourceController: renamed url -> resourceUrl
* Ember.Resource: allow a specific array of props to be passed to duplicateProperties(); defaults to resourceProperties
* Ember.ResourceController: fixed initialization of content